spark init file

--- a/setup.config
+++ b/setup.config
@@ -31,4 +31,4 @@ object_storage_bucket_name="Resources"
 instance_name="spark"
 instance_shape="VM.Standard.E2.1.Micro"
 instance_image_name="Oracle Cloud Developer Image"
-
+instance_cloud_init_file_name="spark.sh"
