--- a/setup.config
+++ b/setup.config
@@ -8,7 +8,8 @@ vcn_nat_gateway_name="NAT Gateway"
 
 vcn_public_security_list_name="Public subnet - security list"
 vcn_public_security_list_egress='[{ "destination": "0.0.0.0/0", "destination-type": "CIDR_BLOCK", "is-stateless": false, "protocol": "all"}]'
-vcn_public_security_list_ingress='[{"is-stateless": false, "protocol": "6", "source": "0.0.0.0/0", "source-type": "CIDR_BLOCK", "tcp-options": {"destination-port-range": {"max": 22, "min": 22}}}, { "icmp-options": {"code": 4, "type": 3}, "is-stateless": false, "protocol": "1", "source": "0.0.0.0/0", "source-type": "CIDR_BLOCK"}]'
+vcn_public_security_list_ingress='[
+{"is-stateless": false, "protocol": "6", "source": "0.0.0.0/0", "source-type": "CIDR_BLOCK", "tcp-options": {"destination-port-range": {"max": 22, "min": 22}}}, {"is-stateless": false, "protocol": "6", "source": "0.0.0.0/0", "source-type": "CIDR_BLOCK", "tcp-options": {"destination-port-range": {"max": 8889, "min": 8888}}}, { "icmp-options": {"code": 4, "type": 3}, "is-stateless": false, "protocol": "1", "source": "0.0.0.0/0", "source-type": "CIDR_BLOCK"}]'
 vcn_public_security_list_ids='["ID"]'
 vcn_public_route_table_name="Public subnet - route table"
 vcn_public_route_table_rule='[{"cidrBlock":"0.0.0.0/0","networkEntityId":"ocid1.internetgateway.oc1"}]'
